Phase 1 - All 3 Layers along with Reporting Layer
Phase 1 - All 3 Layers along with Reporting Layer

--- a/lakehouse/bronze.ipynb
+++ b/lakehouse/bronze.ipynb
@@ -13,7 +13,7 @@
     }
    },
    "source": [
-    "# Bronze Layer – Raw Data Ingestion\n",
+    "# Bronze Layer – Raw Ingested Data\n",
     "\n",
     "The Bronze layer stores raw, unmodified source data ingested from CRM and ERP systems.\n",
     "At this stage:\n",
@@ -252,6 +252,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1daa721d-5230-401b-84ce-21a31522ed0c",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1769011014355}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT * FROM workspace.bronze.crm_prd_info;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -292,7 +322,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8181115402564863,
+     "commandId": 6988011443157036,
      "dataframes": [
       "_sqldf"
      ]
